--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,16 @@ body
     
     
 }
-
+.column
+{
+   height:100%;
+   
+}
 .grid
 {
     display:flex;
     background-color:white;
     padding:3px;
-    
     border:1px solid black;
     
 
