Added color picker

--- a/styles.css
+++ b/styles.css
@@ -27,5 +27,15 @@ body
 
 
 }
-
-
+#red 
+{
+    background-color:red;
+}
+#blue
+{
+    background-color:blue;
+}
+#green
+{
+    background-color:green;
+}
